<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_margin="2dp"
    android:padding="10dp"
    android:background="#e5edda">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/professional_details"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/org1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:hint="@string/enter_organization_name"
        android:textSize="20sp"
        android:layout_gravity="end"
        android:gravity=""
        android:padding="10dp"/>

    <TextView
        android:id="@+id/Designation1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:hint="@string/enter_designation"
        android:textSize="20sp"
        android:layout_gravity="end"
        android:gravity=""
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:orientation="vertical"
        android:weightSum="1"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".20"
            android:text="Since"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/since1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".35"
            android:layout_gravity="end"
            android:gravity=""
            android:text="@string/enter_date"
            android:inputType="date"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".20"
            android:text="@string/to"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/to1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".35"
            android:text="@string/enter_date"
            android:textSize="20sp"
            android:layout_gravity="end"
            android:gravity=""

            android:inputType="date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".06"
        tools:ignore="UselessLeaf" />

    <Button
        android:id="@+id/goback"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_gravity="center"
        android:text="@string/go_back"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/update"
        android:layout_width="150dp"
        android:layout_height="10dp"
        android:layout_weight=".1"
        android:layout_gravity="center"
        android:text="@string/enter_data"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:padding="10dp"/>

</LinearLayout>