<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#e5edda"
    android:layout_margin="2dp"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:orientation="vertical"
        android:weightSum="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Educational Details"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/college1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:hint="@string/enter_college_university_name"
        android:textSize="20sp"
        android:layout_gravity="end"
        android:gravity=""
        android:padding="10dp"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/Subject1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:hint="@string/enter_subject"
        android:textSize="20sp"
        android:layout_gravity="end"
        android:gravity=""
        android:padding="10dp"/>

    <TextView
        android:id="@+id/loc1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:hint="Location"
        android:textSize="20sp"
        android:layout_gravity="end"
        android:gravity=""
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".20"
            android:text="@string/since"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/sinceDate1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".30"
            android:hint="@string/enter_date"
            android:inputType="date"
            android:textSize="20sp"
            android:layout_gravity="end"
            android:gravity=""
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".20"
            android:text="@string/to"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tillDate1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".30"
            android:hint="@string/enter_date"
            android:inputType="date"
            android:textSize="20sp"
            android:layout_gravity="end"
            android:gravity=""
            android:padding="5dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/certificates1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:text="Certificates"
        android:textSize="25sp"
        android:layout_gravity="bottom"
        android:gravity=""
        android:textStyle="bold" />

    <Button
        android:id="@+id/edunext1"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:layout_gravity="center"
        android:text="@string/next"
        android:textSize="25sp" />

</LinearLayout>