<LinearLayout
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".14"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4" />

        <ImageView
            android:layout_width="278dp"
            android:layout_height="134dp"
            android:gravity="center"
            android:src="@drawable/nv" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:text="Notifications"
        android:textStyle="bold"
        android:textColor="#139ed1"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_marginRight="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#edf0f2"
            android:layout_marginBottom="10dp"
            android:text="ME"
            android:paddingTop="20dp"
            android:paddingLeft="40dp"
            android:textSize="20sp"
            android:fontFamily="casual" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#edf0f2"
            android:layout_marginBottom="10dp"
            android:text="@string/account"
            android:paddingTop="20dp"
            android:paddingLeft="40dp"
            android:textSize="20sp"
            android:fontFamily="casual" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#edf0f2"
            android:layout_marginBottom="10dp"
            android:text="NOTIFICATION"
            android:paddingTop="20dp"
            android:paddingLeft="40dp"
            android:textSize="20sp"
            android:fontFamily="casual" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#edf0f2"
            android:layout_marginBottom="10dp"
            android:text="PRIVACY"
            android:paddingTop="20dp"
            android:paddingLeft="40dp"
            android:textSize="20sp"
            android:fontFamily="casual" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#edf0f2"
            android:layout_marginBottom="10dp"
            android:text="@string/help"
            android:paddingTop="20dp"
            android:paddingLeft="40dp"
            android:textSize="20sp"
            android:fontFamily="casual" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="#edf0f2"
            android:layout_marginBottom="10dp"
            android:text="@string/logout"
            android:paddingTop="20dp"
            android:paddingLeft="40dp"
            android:textSize="20sp"
            android:fontFamily="casual" />

    </LinearLayout>

</LinearLayout>